ChangeLog for cryptmount (https://github.com/rwpenney/cryptmount)

20Oct25	- Added support for LUKS detached headers

05May25	- Updated gettext configuration

28Jul24	- *** cryptmount-6.3 released

21Jul24	- Migrated devmapper naming assumptions to /dev/disk/by-id/dm-name-*

11Jul24	- Fixed duplicated loopback free device search
	Replaced udev-settle mechanisms with new await_device() mechanism
	Removed use of libudev

17Jun23	- Improved zeroing of inputs to getopt_long() (as highlighted by dukpt/@ptef)

30Apr23	- Incorporated Debian patch for cmtab.example installation

23Apr23	- Improved configurability of systemd unit path

07Jan23	- *** cryptmount-6.2 released

02Jan23	- Enabled libudev by default

20Dec22	- Updated various maintainer URLs to point to github.com
	Reduced verbosity of manual-page variable substitution
	Improved unit-test support for NVME devices

08Oct22	- *** cryptmount-6.1 released

01Oct22	- Improved udev settling schedule and filesystem syncs
	Added partial support for compiling against libgcrypt-1.7

25Sep22	- Improved waiting schedule for inter-process status locks
	Improved stability of tests against legacy cryptsetup

11Sep22	- Revised installation instructions and top-level README

03Sep22	- *** cryptmount-6.0 released

14Aug22	- Revised algorithm test-cases in mudslinger script to align to OpenSSL-3.0

06Aug22	- Refreshed cipher algorithm names to match OpenSSL/libgcrypt conventions
	Converted default libgcrypt keycipher to aes256-xts and keyhash to sha256

24Jul22	- Converted setup-script to use LUKS format by default

27Dec20	- Incorporated updated German translations from Helge Kreutzmann

06Sep20	- Refreshed cipher-mode and loop-device selection in "mudslinger" testing script

16Nov19	- Refined handling of passwords in "mudslinger" testing script

06Oct19	- Improved documentation of default values in cmtab manual page

28Sep19	- Removed use of 'minix' filesystem in testing script
