@@ -1,6 +1,7 @@
 ChangeLog for cryptmount (https://github.com/rwpenney/cryptmount)
 
 20Oct25	- Added support for LUKS detached headers
+	Updated gettext configuration (to v0.23.1)
 
 05May25	- Updated gettext configuration
 
